Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • gst-plugins-bad gst-plugins-bad
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 890
    • Issues 890
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 98
    • Merge requests 98
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamerGStreamer
  • gst-plugins-badgst-plugins-bad
  • Issues
  • #786
Closed
Open
Issue created Sep 12, 2018 by Bugzilla Migration User@bugzilla-migration

videoaggregator: Notify drained status of a videoaggregator pad

Submitted by Seungha Yang

Link to original bug (#797128)

Description

Add GstVideoAggregatorPad::drained property and
GstVideoAggregator::pad-drained signal to help monitoring composing
status. Some complex use cases (such as dynamic add/remove composing
images), application might want to know when a stream is completely
consumed.
The issue is that EOS event cannot respect the consumed
status of a stream, because a buffer followed by the EOS might have
long duration and therefore the buffer will be alive until running time
of the other stream is reached to the buffer's running time.

Assignee
Assign to
Time tracking